Modify image-vulnerability dir

--- a/web-log-image/views/image.ejs
+++ b/web-log-image/views/image.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header"); -%>
-    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
     <style>
         #style-6::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
